--- a/Hitesh Chaudhary/06_dom/one.html
+++ b/Hitesh Chaudhary/06_dom/one.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Learning</title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-
-    <div class="bg-black">
-        <h2>DOM Learning</h2>
-    </div>
+<body class="bg-black">
+    
     <!-- DOM is Document Object Model -->
 
-    
+    <div>
+        <h2 id="title" class="heading">DOM Learning</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, asperiores.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius et doloremque ullam sit blanditiis velit, in labore numquam possimus dignissimos optio odio dolores reprehenderit exercitationem ipsum omnis, ab nostrum aliquid!</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit placeat recusandae illo repudiandae assumenda accusamus ipsa eveniet non harum esse maxime similique rem voluptatum quaerat dolorum explicabo est, ea quisquam?</p>
+    </div>
 
 
 </body>
